--- a/publications/index.html
+++ b/publications/index.html
@@ -3,12 +3,11 @@
 <html>
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>
-    Publications - Zhiyu He
+    Selected Publications - Zhiyu He
     
   </title>
 
@@ -37,27 +36,20 @@
   <!-- Include Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
+
+  <!-- Configure MathJax -->
+  <script type="text/javascript">
+    window.MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
+        displayMath: [['$$', '$$'], ['\\[', '\\]']]
+      },
+      loader: {load: ['[tex]/ams']}
+    };
+  </script>
   <!-- Include MathJax -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
-  <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-C0YTJSLE5C"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-C0YTJSLE5C');
-  </script> -->
 </head>
-
-
-<!-- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Site Title</title>
-</head> -->
 
 <body>
 
@@ -101,7 +93,7 @@
       <div class="row">
         <div class="col-lg-11 col-md-11 mx-auto">
           <div class="page-heading">
-            <h1>Publications</h1>
+            <h1>Selected Publications</h1>
             
           </div>
         </div>
@@ -200,19 +192,6 @@
 <script src="/assets/vendor/startbootstrap-clean-blog/js/scripts.js"></script>
 
 <script src="/assets/scripts.js"></script>
-
-<!-- Include MathJax -->
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [['$', '$'], ['\\(', '\\)']],
-      processEscapes: true
-    }
-  });
-</script>
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
 
 
 
