--- a/research/index.html
+++ b/research/index.html
@@ -107,15 +107,15 @@
 
         <p>My research interests lie in <strong>optimization</strong>, <strong>control</strong>, and <strong>learning</strong> of <strong>dynamical systems</strong>. I am curious about the interaction between the physical world and computing pipelines.</p>
 
-<h2 id="decision-dependence">Decision Dependence</h2>
+<!-- ## Decision Dependence  
 
 <div style="text-align: center; margin-top: 20px;">
-  <img src="/img/research/decision-dependence.jpg" alt="Decision dependence as a feedback process" style="width: 70%; display: block; margin: 0 auto;" />
+  <img src="/img/research/decision-dependence.jpg" alt="Decision dependence as a feedback process" style="width: 70%; display: block; margin: 0 auto;">
 </div>
 
-<p><strong>Distribution shifts</strong> are often deemed as undesirable external forces that a decision maker should counteract (e.g., via out-of-distribution detection) or conform to (e.g., via online learning or distributionally robust optimization). A feedback phenomenon arises, however, when the deployed decision affects the data-generating distribution. In this regard, performative prediction encodes such a dependence as a static parameterized map.</p>
+**Distribution shifts** are often deemed as undesirable external forces that a decision maker should counteract (e.g., via out-of-distribution detection) or conform to (e.g., via online learning or distributionally robust optimization). A feedback phenomenon arises, however, when the deployed decision affects the data-generating distribution. In this regard, performative prediction encodes such a dependence as a static parameterized map.
 
-<p>In contrast, we formulate <strong>distribution shifts as feedback processes</strong> equipped with nonlinear dynamics and driven by the decision maker. This perspective of <strong>distribution dynamics</strong> motivates us to leverage the composite problem structure and shape future distributions via anticipating sensitivities, thereby enabling optimal decision-making.</p>
+In contrast, we formulate **distribution shifts as feedback processes** equipped with nonlinear dynamics and driven by the decision maker. This perspective of **distribution dynamics** motivates us to leverage the composite problem structure and shape future distributions via anticipating sensitivities, thereby enabling optimal decision-making. -->
 
 <h2 id="optimization-algorithms-as-feedback-controllers">Optimization Algorithms as Feedback Controllers</h2>
 <p><img src="/img/research/FO.png" alt="Optimization algorithms as feedback controllers" style="float: left; margin-right: 50px; width: 35%;" /></p>
@@ -126,7 +126,7 @@
 
 <p><strong>Optimal steady-state operation</strong> of an engineering system is critical. To this end, traditional numerical optimization relies on an exact problem formulation that encompasses system models and disturbance statistics. Such a feedforward pipeline, however, can be restrictive and suboptimal when accurate information on models and disturbances is unavailable.</p>
 
-<p>In contrast, the emerging paradigm of <strong>feedback optimization</strong> bypasses such information and fulfills autonomous optimality-seeking in closed loop. Along this line, we develop fully <strong>model-free</strong> methods that avoids accessing any model information by exploiting real-time evaluations of objective functions.</p>
+<p>In contrast, the emerging paradigm of <strong>feedback optimization</strong> bypasses such information and fulfills autonomous optimality-seeking in closed loop. Along this line, we develop fully <strong>model-free methods</strong> that avoids accessing any model information by exploiting real-time evaluations of objective functions.</p>
 
 <p>Interestingly, model-based and model-free methods own complementary benefits in sample efficiency and provable accuracy. We further propose <strong>gray-box methods</strong> that incorporate prior approximate knowledge to achieve the best of both worlds.</p>
 
