deploy: a50cb4a0a62d1f9563e27f2894669abb9f3257bc

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <div>
   <h3>Contact</h3>
   <p>
-    zhiyhe at ethz.ch &nbsp;&nbsp; or &nbsp;&nbsp; zhiyu.he at tuebingen.mpg.de
+    zhiyhe(at)ethz.ch &nbsp;&nbsp; or &nbsp;&nbsp; zhiyu.he(at)tuebingen.mpg.de
   </p>
 </div>
 
