--- a/publications/index.html
+++ b/publications/index.html
@@ -133,10 +133,10 @@
 
 <ul>
   <li>
-    <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Distributed Nonconvex Optimization: Gradient-free Iterations and $\epsilon$-Globally Optimal Solution. <em>IEEE Transactions on Control of Network Systems</em>, 11(3), 2024.  <a href="https://ieeexplore.ieee.org/document/10517449" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2008.00252.pdf" target="_blank">[arxiv]</a></p>
+    <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Distributed Nonconvex Optimization: Gradient-free Iterations and $\epsilon$-Globally Optimal Solution. <em>IEEE Transactions on Control of Network Systems</em>,  2024.  <a href="https://ieeexplore.ieee.org/document/10517449" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2008.00252.pdf" target="_blank">[arxiv]</a></p>
   </li>
   <li>
-    <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Private and Robust Distributed Nonconvex Optimization via Polynomial Approximation. <em>IEEE Transactions on Control of Network Systems</em>, 2024.    <a href="https://ieeexplore.ieee.org/document/10402077" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2101.06127.pdf" target="_blank">[arxiv]</a></p>
+    <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Private and Robust Distributed Nonconvex Optimization via Polynomial Approximation. <em>IEEE Transactions on Control of Network Systems</em>, 11(3), 2024.  <a href="https://ieeexplore.ieee.org/document/10402077" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2101.06127.pdf" target="_blank">[arxiv]</a></p>
   </li>
 </ul>
 
