--- a/teaching/index.html
+++ b/teaching/index.html
@@ -154,7 +154,7 @@ co-supervised with Dr. Marta Zagorowska and Dr. Alisa Rupenyan</p>
   <li>
     <p><u>Vinzenz Tütsch</u> (ETH, MA, 2023), Towards Autonomous and Distributed Traffic Signal Control<br />
 Co-supervised with Prof. Kenan Zhang<br />
-<u>V. Tütsch</u>, <strong>Z. He</strong>, F. Dörfler, and K. Zhang, Distributed Traffic Signal Control Via Coordinated Maximum Pressure-Plus-Penalty, <em>IEEE International Conference on Intelligent Transportation Systems</em>, 2024. <a href="https://arxiv.org/pdf/2404.19547" target="_blank">[arxiv]</a></p>
+<u>V. Tütsch</u>, <strong>Z. He</strong>, F. Dörfler, and K. Zhang, Distributed Traffic Signal Control via Coordinated Maximum Pressure-Plus-Penalty, <em>IEEE International Conference on Intelligent Transportation Systems</em>, 2024. <a href="https://arxiv.org/pdf/2404.19547" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p><u>Jan Ghadamian</u> (ETH, MA, 2025), Hierarchical Decision-Making in Layered Urban Mobility Systems<br />
