deploy: 5cda9017ab64613ceef3c9d3217b5398733eb012

--- a/research/index.html
+++ b/research/index.html
@@ -107,15 +107,15 @@
 
         <p>My research interests lie in <strong>optimization</strong>, <strong>control</strong>, and <strong>learning</strong> of <strong>dynamical systems</strong>. I am curious about the interaction between the physical world and computing pipelines.</p>
 
-<!-- ## Decision Dependence  
+<h2 id="decision-dependence">Decision Dependence</h2>
 
 <div style="text-align: center; margin-top: 20px;">
-  <img src="/img/research/decision-dependence.jpg" alt="Decision dependence as a feedback process" style="width: 70%; display: block; margin: 0 auto;">
+  <img src="/img/research/decision-dependence.jpg" alt="Decision dependence as a feedback process" style="width: 70%; display: block; margin: 0 auto;" />
 </div>
 
-**Distribution shifts** are often deemed as undesirable external forces that a decision maker should counteract (e.g., via out-of-distribution detection) or conform to (e.g., via online learning or distributionally robust optimization). A feedback phenomenon arises, however, when the deployed decision affects the data-generating distribution. In this regard, performative prediction encodes such a dependence as a static parameterized map.
+<p><strong>Distribution shifts</strong> are often deemed as undesirable external forces that a decision maker should counteract (e.g., via out-of-distribution detection) or conform to (e.g., via online learning or distributionally robust optimization). A feedback phenomenon arises, however, when the deployed decision affects the data-generating distribution. In this regard, performative prediction encodes such a dependence as a static parameterized map.</p>
 
-In contrast, we formulate **distribution shifts as feedback processes** equipped with nonlinear dynamics and driven by the decision maker. This perspective of **distribution dynamics** motivates us to leverage the composite problem structure and shape future distributions via anticipating sensitivities, thereby enabling optimal decision-making. -->
+<p>In contrast, we formulate <strong>distribution shifts as feedback processes</strong> equipped with nonlinear dynamics and driven by the decision maker. This perspective of <strong>distribution dynamics</strong> motivates us to leverage the composite problem structure and shape future distributions via anticipating sensitivities, thereby enabling optimal decision-making.</p>
 
 <h2 id="optimization-algorithms-as-feedback-controllers">Optimization Algorithms as Feedback Controllers</h2>
 <p><img src="/img/research/FO.png" alt="Optimization algorithms as feedback controllers" style="float: left; margin-right: 50px; width: 35%;" /></p>
