deploy: 5fd58a06865e3c8e189ecf42d23adc24df67ed71

--- a/publications/index.html
+++ b/publications/index.html
@@ -129,11 +129,21 @@
 
 <div style="margin-top: 50px;"></div>
 
+<h2 id="online-decision-making">Online Decision-Making</h2>
+
+<div style="margin-top: 30px;"></div>
+
+<ul>
+  <li>Michael Muehlebach, <strong>Zhiyu He</strong>, Michael I. Jordan. The Sample Complexity of Online Reinforcement Learning: A Multi-Model Perspective. <em>arXiv:2501.15910 [cs.LG]</em>, 2025.  <a href="https://arxiv.org/pdf/2501.15910" target="_blank">[arxiv]</a></li>
+</ul>
+
+<div style="margin-top: 50px;"></div>
+
 <h2 id="distributed-optimization-via-polynomial-approximation">Distributed Optimization via Polynomial Approximation</h2>
 
 <ul>
   <li>
-    <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Distributed Nonconvex Optimization: Gradient-free Iterations and $\epsilon$-Globally Optimal Solution. <em>IEEE Transactions on Control of Network Systems</em>,  2024.  <a href="https://ieeexplore.ieee.org/document/10517449" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2008.00252.pdf" target="_blank">[arxiv]</a></p>
+    <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Distributed Nonconvex Optimization: Gradient-free Iterations and $\epsilon$-Globally Optimal Solution. <em>IEEE Transactions on Control of Network Systems</em>, 11(4), 2024.  <a href="https://ieeexplore.ieee.org/document/10517449" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2008.00252.pdf" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p><strong>Zhiyu He</strong>, Jianping He, Cailian Chen, Xinping Guan. Private and Robust Distributed Nonconvex Optimization via Polynomial Approximation. <em>IEEE Transactions on Control of Network Systems</em>, 11(3), 2024.  <a href="https://ieeexplore.ieee.org/document/10402077" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2101.06127.pdf" target="_blank">[arxiv]</a></p>
