deploy: b08f4b12c3ad70a84f88ee56011870276ef4d756

--- a/research/index.html
+++ b/research/index.html
@@ -115,7 +115,7 @@
 
 <p><strong>Distribution shifts</strong> are often deemed as undesirable external forces that a decision maker should counteract (e.g., via out-of-distribution detection) or conform to (e.g., via online learning or distributionally robust optimization). A feedback phenomenon arises, however, when the deployed decision affects the data-generating distribution. In this regard, performative prediction encodes such a dependence as a static parameterized map.</p>
 
-<p>In contrast, we formulate <strong>distribution shifts as feedback processes</strong> equipped with nonlinear dynamics and driven by the decision maker. This perspective of <strong>distribution dynamics</strong> motivates us to leverage the composite problem structure and shape future distributions via anticipating sensitivities, thereby enabling optimal decision-making.</p>
+<p>In contrast, I and my collaborators formulate <strong>distribution shifts as feedback processes</strong> equipped with nonlinear dynamics and driven by a decision maker. This perspective of <strong>distribution dynamics</strong> motivates us to leverage the composite problem structure and shape future distributions via anticipating sensitivities, thereby enabling optimal decision-making.</p>
 
 <h2 id="optimization-algorithms-as-feedback-controllers">Optimization Algorithms as Feedback Controllers</h2>
 <p><img src="/img/research/FO.png" alt="Optimization algorithms as feedback controllers" style="float: left; margin-right: 50px; width: 35%;" /></p>
@@ -130,7 +130,7 @@
 
 <p>Interestingly, model-based and model-free methods own complementary benefits in sample efficiency and provable accuracy. We further propose <strong>gray-box methods</strong> that incorporate prior approximate knowledge to achieve the best of both worlds.</p>
 
-<h2 id="approximation-enabled-distributed-optimization">Approximation-enabled Distributed Optimization</h2>
+<h2 id="approximation-enabled-distributed-optimization">Approximation-Enabled Distributed Optimization</h2>
 
 <div style="text-align: center; margin-top: 20px;">
   <img src="/img/research/overview-DO.jpg" alt="Distributed optimization via polynomial approximation" style="width: 70%; display: block; margin: 0 auto;" />
