deploy: 9c60baccb37e2343dbb32da223c91c189656c265

--- a/publications/index.html
+++ b/publications/index.html
@@ -105,7 +105,22 @@
     <div class="row">
       <div class="col-lg-11 col-md-11 mx-auto">
 
-        <h2 id="nonlinear-feedback-optimization">Nonlinear Feedback Optimization</h2>
+        <h2 id="online-decision-making">Online Decision-Making</h2>
+
+<div style="margin-top: 30px;"></div>
+
+<ul>
+  <li>
+    <p><strong>Zhiyu He</strong>, Saverio Bolognani, Florian Dörfler, Michael Muehlebach. Decision-Dependent Stochastic Optimization: The Role of Distribution Dynamics. <em>arXiv:2503.07324 [math.OC]</em>, 2025.  <a href="https://arxiv.org/pdf/2503.07324" target="_blank">[arxiv]</a>  <a href="https://github.com/zyhe/distribution-dynamics-opt" target="_blank">[code]</a></p>
+  </li>
+  <li>
+    <p>Michael Muehlebach, <strong>Zhiyu He</strong>, Michael I. Jordan. The Sample Complexity of Online Reinforcement Learning: A Multi-Model Perspective. <em>arXiv:2501.15910 [cs.LG]</em>, 2025.  <a href="https://arxiv.org/pdf/2501.15910" target="_blank">[arxiv]</a></p>
+  </li>
+</ul>
+
+<div style="margin-top: 50px;"></div>
+
+<h2 id="nonlinear-feedback-optimization">Nonlinear Feedback Optimization</h2>
 
 <ul>
   <li>
@@ -125,16 +140,6 @@
 
 <ul>
   <li>Florian Dörfler, <strong>Zhiyu He</strong>, Giuseppe Belgioioso, Saverio Bolognani, John Lygeros, Michael Muehlebach. Towards a Systems Theory of Algorithms. <em>IEEE Control Systems Letters</em>, 8, 2024.  <a href="https://ieeexplore.ieee.org/document/10540567" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2401.14029" target="_blank">[arxiv]</a></li>
-</ul>
-
-<div style="margin-top: 50px;"></div>
-
-<h2 id="online-decision-making">Online Decision-Making</h2>
-
-<div style="margin-top: 30px;"></div>
-
-<ul>
-  <li>Michael Muehlebach, <strong>Zhiyu He</strong>, Michael I. Jordan. The Sample Complexity of Online Reinforcement Learning: A Multi-Model Perspective. <em>arXiv:2501.15910 [cs.LG]</em>, 2025.  <a href="https://arxiv.org/pdf/2501.15910" target="_blank">[arxiv]</a></li>
 </ul>
 
 <div style="margin-top: 50px;"></div>
