deploy: acefb7ceb65a614560b5b5b143bc1df253aa4f41

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -116,12 +116,12 @@
     <p>Wenbin Wang (ETH, MA, 2023), <em>Feedback Optimization over Networks: Decentralized and Distributed Approaches</em><br />
 Co-supervised with Dr. Saverio Bolognani<br />
 <u>W. Wang</u>, <strong>Z. He</strong>, G. Belgioioso, S. Bolognani, and F. Dörfler, Decentralized Feedback Optimization via Sensitivity Decoupling: Stability and Sub-optimality, <em>European Control Conference</em>, 2024.  <a href="https://ieeexplore.ieee.org/abstract/document/10591093" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2311.09408" target="_blank">[arxiv]</a><br />
-<u>W. Wang</u>, <strong>Z. He</strong>, G. Belgioioso, S. Bolognani, and F. Dörfler, Online Feedback Optimization over Networks: A Distributed Model-Free Approach, <em>63rd IEEE Conference on Decision and Control</em>, 2024. <a href="https://arxiv.org/pdf/2403.19834">[arxiv]</a></p>
+<u>W. Wang</u>, <strong>Z. He</strong>, G. Belgioioso, S. Bolognani, and F. Dörfler, Online Feedback Optimization over Networks: A Distributed Model-Free Approach, <em>63rd IEEE Conference on Decision and Control</em>, 2024.  <a href="https://ieeexplore.ieee.org/document/10886448" target="_blank">[pdf]</a> <a href="https://arxiv.org/pdf/2403.19834" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p>Wen Yi Chan (ETH, MA, 2024), <em>Robustify Feedback Optimization via Regularization</em><br />
 Co-supervised with Dr. Keith Moffat<br />
-Manuscript in preparation</p>
+  <u>W. Chan*</u>, <strong>Z. He</strong>*, K. Moffat, S. Bolognani, M. Muehlebach, and F. Dörfler, Robust Feedback Optimization with Model Uncertainty: A Regularization Approach, <em>arXiv:2503.24151 [math.OC]</em>, 2025. <a href="https://arxiv.org/pdf/2503.24151" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p>Christian Hartnik (ETH, MA, 2022), <em>Online Bayesian Optimization: A Closed-Loop Approach</em><br />
@@ -148,17 +148,21 @@ co-supervised with Dr. Marta Zagorowska and Dr. Alisa Rupenyan</p>
   </li>
 </ul>
 
-<h3 id="applications-in-mobility-systems">Applications in Mobility Systems</h3>
+<h3 id="applications-in-mobility--energy-systems">Applications in Mobility &amp; Energy Systems</h3>
 
 <ul>
   <li>
     <p>Vinzenz Tütsch (ETH, MA, 2023), Towards Autonomous and Distributed Traffic Signal Control<br />
 Co-supervised with Prof. Kenan Zhang<br />
-<u>V. Tütsch</u>, <strong>Z. He</strong>, F. Dörfler, and K. Zhang, Distributed Traffic Signal Control via Coordinated Maximum Pressure-Plus-Penalty, <em>IEEE International Conference on Intelligent Transportation Systems</em>, 2024. <a href="https://arxiv.org/pdf/2404.19547" target="_blank">[arxiv]</a></p>
+<u>V. Tütsch</u>, <strong>Z. He</strong>, F. Dörfler, and K. Zhang, Distributed Traffic Signal Control via Coordinated Maximum Pressure-Plus-Penalty, <em>IEEE International Conference on Intelligent Transportation Systems</em>, 2024. <a href="https://ieeexplore.ieee.org/document/10920011" target="_blank">[pdf]</a> <a href="https://arxiv.org/pdf/2404.19547" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p>Jan Ghadamian (ETH, MA, 2025), Hierarchical Decision-Making in Layered Urban Mobility Systems<br />
 Co-supervised with Mingjia He</p>
+  </li>
+  <li>
+    <p>Jiarui Yu (Empa, MA, 2025), Online dynamic pricing for electrical distribution systems<br />
+Co-supervised with Dr. Hanmin Cai and Wenbin Wang</p>
   </li>
 </ul>
 
