--- a/research/index.html
+++ b/research/index.html
@@ -110,7 +110,7 @@
 <h2 id="decision-dependence">Decision Dependence</h2>
 
 <div style="text-align: center; margin-top: 20px;">
-  <img src="/img/research/decision-dependence.jpg" alt="Decision dependence as a feedback process" style="width: 70%; display: block; margin: 0 auto;" />
+  <img src="/img/research/decision-dependence.png" alt="Decision dependence as a feedback process" style="width: 70%; display: block; margin: 0 auto;" />
 </div>
 
 <p><strong>Distribution shifts</strong> are often deemed as undesirable external forces that a decision maker should counteract (e.g., via out-of-distribution detection) or conform to (e.g., via online learning or distributionally robust optimization). A feedback phenomenon arises, however, when the deployed decision affects the data-generating distribution. In this regard, performative prediction encodes such a dependence as a static parameterized map.</p>
