deploy: 500308e28aeb274f7c339cd4c954613f4d0d0c78

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
   <h2>Research Interests</h2>
   <p>
     Zhiyu's research interests lie in <strong>optimization</strong>, <strong>control</strong>, and <strong>learning</strong> of <strong>dynamical systems</strong>. He is curious about the interaction between the physical world and computing pipelines.
+  <br />
+  <a href="https://scholar.google.com/citations?user=6F5yIIEAAAAJ&amp;hl=en" target="_blank">[Google Scholar]</a>
   </p>
 </div>
 
@@ -199,6 +201,16 @@
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          
+          
+          <li class="list-inline-item">
+            <a href="https://scholar.google.com/citations?user=6F5yIIEAAAAJ">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
