--- a/publications/index.html
+++ b/publications/index.html
@@ -105,7 +105,11 @@
     <div class="row">
       <div class="col-lg-11 col-md-11 mx-auto">
 
-        <h2 id="online-decision-making">Online Decision-Making</h2>
+        <p>Please see the Google Scholar <a href="https://scholar.google.com/citations?user=6F5yIIEAAAAJ&amp;hl=en" target="_blank">profile</a> of Zhiyu He for more details.</p>
+
+<div style="margin-top: 50px;"></div>
+
+<h2 id="online-decision-making">Online Decision-Making</h2>
 
 <div style="margin-top: 30px;"></div>
 
@@ -127,12 +131,14 @@
     <p><strong>Zhiyu He</strong>, Saverio Bolognani, Jianping He, Florian Dörfler, and Xinping Guan. Model-Free Nonlinear Feedback Optimization. <em>IEEE Transactions on Automatic Control</em>, 69(7), 2024.  <a href="https://ieeexplore.ieee.org/document/10354356" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2201.02395" target="_blank">[arxiv]</a>  <a href="https://www.research-collection.ethz.ch/handle/20.500.11850/646002" target="_blank">[code]</a></p>
   </li>
   <li>
-    <p><strong>Zhiyu He</strong>, Saverio Bolognani, Michael Muehlebach, Florian Dörfler. Gray-Box Nonlinear Feedback Optimization. <em>arXiv:2404.04355 [math.OC]</em>, 2024.  <a href="https://arxiv.org/pdf/2404.04355" target="_blank">[arxiv]</a></p>
+    <p><strong>Zhiyu He</strong>, Saverio Bolognani, Michael Muehlebach, Florian Dörfler. Gray-Box Nonlinear Feedback Optimization. <em>arXiv:2404.04355 [math.OC]</em>, 2024.  <a href="https://arxiv.org/pdf/2404.04355" target="_blank">[arxiv]</a>  <a href="https://github.com/zyhe/Gray-box-nonlinear-feedback-optimization" target="_blank">[code]</a></p>
   </li>
   <li>
     <p>Adrian Hauswirth, <strong>Zhiyu He</strong>, Saverio Bolognani, Gabriela Hug, and Florian Dörfler. Optimization algorithms as robust feedback controllers. <em>Annual Reviews in Control</em>, 57(100941), 2024.  <a href="https://www.sciencedirect.com/science/article/pii/S1367578824000105" target="_blank">[pdf]</a>  <a href="https://arxiv.org/pdf/2103.11329" target="_blank">[arxiv]</a></p>
   </li>
 </ul>
+
+<div style="margin-top: 50px;"></div>
 
 <h2 id="systems-theory-of-algorithms">Systems Theory of Algorithms</h2>
 
@@ -198,6 +204,16 @@
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          
+          
+          <li class="list-inline-item">
+            <a href="https://scholar.google.com/citations?user=6F5yIIEAAAAJ">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
