deploy: b2d42f7f87be276d3f4531cc0328c3a42c7322ce

--- a/research/index.html
+++ b/research/index.html
@@ -105,7 +105,7 @@
     <div class="row">
       <div class="col-lg-11 col-md-11 mx-auto">
 
-        <p>My research interests lie in <strong>optimization</strong>, <strong>control</strong>, and <strong>learning</strong> of <strong>dynamical systems</strong>. I am curious about the interaction between the physical world and computing pipelines.</p>
+        <p>My research interests lie in <strong>optimization</strong>, <strong>control</strong>, and <strong>learning</strong> of <strong>dynamical systems</strong>. I explore the interaction between the physical world and computing pipelines.</p>
 
 <h2 id="decision-dependence">Decision Dependence</h2>
 
