--- a/teaching/index.html
+++ b/teaching/index.html
@@ -121,7 +121,7 @@ Co-supervised with Dr. Saverio Bolognani<br />
   <li>
     <p>Wen Yi Chan (ETH, MA, 2024), <em>Robustify Feedback Optimization via Regularization</em><br />
 Co-supervised with Dr. Keith Moffat<br />
-  <u>W. Chan*</u>, <strong>Z. He</strong>*, K. Moffat, S. Bolognani, M. Muehlebach, and F. Dörfler, Robust Feedback Optimization with Model Uncertainty: A Regularization Approach, <em>arXiv:2503.24151 [math.OC]</em>, 2025. <a href="https://arxiv.org/pdf/2503.24151" target="_blank">[arxiv]</a></p>
+  <u>W. Chan*</u>, <strong>Z. He</strong>*, K. Moffat, S. Bolognani, M. Muehlebach, and F. Dörfler, Robust Feedback Optimization with Model Uncertainty: A Regularization Approach, <em>64th IEEE Conference on Decision and Control</em>, 2025. <a href="https://arxiv.org/pdf/2503.24151" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p>Christian Hartnik (ETH, MA, 2022), <em>Online Bayesian Optimization: A Closed-Loop Approach</em><br />
