deploy: 30e144b6eee36073060f5083fef922b7954439f1

--- a/research/index.html
+++ b/research/index.html
@@ -105,7 +105,9 @@
     <div class="row">
       <div class="col-lg-11 col-md-11 mx-auto">
 
-        <p>My research interests lie in <strong>optimization</strong>, <strong>control</strong>, and <strong>learning</strong> of <strong>dynamical systems</strong>. I explore the interaction between the physical world and computing pipelines.</p>
+        <p>I study <strong>closed-loop decision-making</strong> pipelines to enable the efficient operation of modern infrastructures. My research focuses on designing adaptive and modular pipelines—such as <strong>online feedback optimization</strong> and <strong>decision-dependent stochastic optimization</strong>—that tackle the complexity, scale, and uncertainty inherent in engineering systems, including energy, mobility, and sociotechnical domains.</p>
+
+<!-- My research interests lie in **optimization**, **control**, and **learning** of **dynamical systems**. I explore the interaction between the physical world and computing pipelines.   -->
 
 <h2 id="decision-dependence">Decision Dependence</h2>
 
