deploy: 07fa749dbe639a295ae6c187eef5ff3b6d043a4c

--- a/research/index.html
+++ b/research/index.html
@@ -107,6 +107,8 @@
 
         <p>I study <strong>closed-loop decision-making</strong> pipelines to enable the efficient operation of modern infrastructures. My research focuses on designing adaptive and modular pipelines—such as <strong>online feedback optimization</strong> and <strong>decision-dependent stochastic optimization</strong>—that tackle the complexity, scale, and uncertainty inherent in engineering systems, including energy, mobility, and sociotechnical domains.</p>
 
+<p><a href="https://scholar.google.com/citations?user=6F5yIIEAAAAJ&amp;hl=en">[Google Scholar]</a></p>
+
 <!-- My research interests lie in **optimization**, **control**, and **learning** of **dynamical systems**. I explore the interaction between the physical world and computing pipelines.   -->
 
 <h2 id="decision-dependence">Decision Dependence</h2>
