--- a/teaching/index.html
+++ b/teaching/index.html
@@ -129,7 +129,7 @@ co-supervised with Dr. Marta Zagorowska and Dr. Alisa Rupenyan</p>
   </li>
 </ul>
 
-<h3 id="distribution-optimization-and-network-systems">Distribution Optimization and Network Systems</h3>
+<h3 id="distributed-optimization-and-network-systems">Distributed Optimization and Network Systems</h3>
 
 <p>The following projects are all co-supervised with Prof. Jianping He.</p>
 
@@ -158,7 +158,8 @@ Co-supervised with Prof. Kenan Zhang<br />
   </li>
   <li>
     <p>Jan Ghadamian (ETH, MA, 2025), Hierarchical Decision-Making in Layered Urban Mobility Systems<br />
-Co-supervised with Mingjia He</p>
+Co-supervised with Mingjia He<br />
+M. He, <strong>Z. He</strong>, <u>J. Ghadamian</u>, F. Dörfler, E. Frazzoli, and G. Zardini, Hierarchical Strategic Decision-Making in Layered Mobility Systems, 2025. <a href="https://arxiv.org/pdf/2511.08734" target="_blank">[arxiv]</a></p>
   </li>
   <li>
     <p>Jiarui Yu (Empa, MA, 2025), Online dynamic pricing for electrical distribution systems<br />
@@ -171,8 +172,8 @@ Co-supervised with Dr. Hanmin Cai and Wenbin Wang</p>
 <ul>
   <li>
     <p><em>Control Systems</em>, Prof. Florian Dörfler<br />
-2023 Fall<br />
-Duties: coding exercises and hands-on experiments</p>
+2023 Fall, 2025 Fall<br />
+Duties: coding exercises, hands-on experiments, and exercise classes</p>
   </li>
   <li>
     <p><em>Large-Scale Convex Optimization</em>, Dr. Michael Mühlebach<br />
